ID-kaardiga: konteiner loodud

--- a/static/siga-go.css
+++ b/static/siga-go.css
@@ -18,7 +18,7 @@ color: Gray;
 }
 
 /* Tekstisisestusala */
-#Tekst { 
+#Tekstisisestusala { 
 display: block;
 height: auto; /* 2.5rem; */
 padding: 0.5rem 0.75rem;
